# vibecode-arena

./: .editorconfig  .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  ROADMAP.md  app.py  eslint.config.js  package.json  playwright.config.ts  pyproject.toml  svelte.config.js  vite.config.ts  vitest.config.ts  wrangler.toml  wrangler.worker.toml
.github/workflows/: ci.yml  deploy.yml
arena/: __init__.py  agent.py  api.py  gradio_app.py  judge_executor.py  judge_graph.py  match_flow.py  match_store.py  models.py  service.py  smoke.py  vibecoder.py
docs/adr/: 0001-python-deepagents-rewrite.md  0002-gradio-on-hugging-face.md  0003-redis-for-match-records.md  0004-leaderboards-live-in-match-flow.md
patches/: E2B_ESM_FILE_URL_BUG.md  e2b+2.8.3.patch
sandbox/files/: index.html  package.json  vite.config.js
skills/gradio-ui-builder/: SKILL.md
skills/submission-checklist/: SKILL.md
src/: app.css  app.html  hooks.server.ts  service-worker.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
static/: manifest.json  robots.txt
template/: build.prod.ts  template.ts
template/files/: vite.config.js
tests/e2e/: create-room.test.ts  game-errors.test.ts  game-flow.test.ts  global-teardown.ts  home.test.ts  join-room.test.ts  (+2 more)
tests_python/: test_agent.py  test_api.py  test_gradio_app.py  test_judge_executor.py  test_judge_graph.py  test_match_flow.py  test_match_store.py  test_models.py  test_service.py  test_vibecoder.py
worker/: .env.example  tsconfig.json
(+101 files in other folders)
