[project]
name = "vibecode-arena"
version = "0.1.0"
description = "Python DeepAgents coding arena"
requires-python = ">=3.11"
dependencies = [
    "daytona>=0.24.0",
    "deepagents>=0.5.4",
    "fastapi>=0.115.0",
    "gradio>=6.0.0",
    "langchain>=1.0.0",
    "langchain-daytona>=0.0.6",
    "langchain-openrouter>=0.2.1",
    "langchain-quickjs>=0.1.0",
    "langgraph>=1.2.0",
    "pydantic>=2.10.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
